# Engine3D_DX12

./: .gitignore  CMakeLists.txt  CMakePresets.json  GenerateProjectFiles.bat  README.md
Assets/Models/BB_023/: BB_023.mtl
BkUp/: BkUpShaderCmake.txt  DeferredPipelines.h
Bugs/: Bugs.txt
Editor/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt  RCa25368  main.cpp
Engine/AssetManager/: AssetManager.cpp  AssetManager.h  AssimpLoader.cpp  AssimpLoader.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Vertex.cpp  Vertex.h
Engine/AssetManager/Shared/: AssetManagerDefines.h
Engine/Audio/: AudioSystem.cpp  AudioSystem.h
Engine/Collision/: BoundingVolumes.h  Octree.h
Engine/DX12/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  ByteAddressBuffer.cpp  ByteAddressBuffer.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  DeferredRenderer.cpp  DeferredRenderer.h  DescriptorAllocation.cpp  DescriptorAllocatorPage.cpp  GUI.cpp  GenerateMipsPSO.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PanoToCubemapPSO.cpp  PipelineManager.cpp  PipelineManager.h  Resource.cpp  Resource.h  RootSignature.cpp  StaticDescriptorHeap.cpp  StaticDescriptorHeap.h  Texture.cpp  Texture.h  TextureUsage.h  UploadBuffer.cpp  VertexBuffer.h
Engine/DX12/Raytracing/: Raytracing.cpp  Raytracing.h
Engine/DX12/Renderer/: DeferredRenderer.cpp  DeferredRenderer.h
Engine/DX12/Renderer/CompositionPass/: CompositionPass.cpp  CompositionPass.h
Engine/DX12/Renderer/Debug/: DebugTexture.cpp
Engine/DX12/Renderer/GBuffer/: GBuffer.cpp  GBuffer.h
Engine/DX12/Renderer/Lightpass/: LightPass.cpp  LightPass.h
Engine/Editor/: Editor.cpp  Editor.h  GUI.cpp  GUI.h
Engine/Libs/NRI/: CMakeLists.txt
Engine/Libs/PhysX/: LICENSE.md  README.md
Engine/Libs/PhysX/physx/debug/: LowLevelAABB_static_64.lib  PVDRuntime_64.exp  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.lib  PhysXCooking_64.exp  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXGpu_64.dll.REMOVED.git-id  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.exp  PhysX_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
Engine/Libs/PhysX/physx/release/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PVDRuntime_64.exp  PVDRuntime_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.lib  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.lib  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXFoundation_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.exp  PhysX_64.lib  PhysX_64.map  SceneQuery_static_64.lib
Engine/Libs/RayTracingDenoiser/: CMakeLists.txt  README.md
Engine/Lights/: DirectionalLight.cpp  DirectionalLight.h  LightManager.cpp  LightManager.h
Engine/Physics/: PhysicsActor.cpp  PhysicsActor.h  PhysicsSystem.cpp  PhysicsSystem.h
Engine/Raytracing/: Raytracing.cpp  Raytracing.h
Engine/Renderer/: DeferredRenderer.cpp  DeferredRenderer.h
Engine/Renderer/CompositionPass/: CompositionPass.cpp  CompositionPass.h
Engine/Renderer/DLSS/: DLSS.cpp  DLSS.h
Engine/Renderer/Debug/: DebugTexture.cpp  DebugTexture.h
Engine/Renderer/Denoiser/: NvidiaDenoiser.cpp  NvidiaDenoiser.h
Engine/Renderer/DirectLightPass/: DirectLightPass.cpp  DirectLightPass.h
Engine/Renderer/GBuffer/: GBuffer.cpp  GBuffer.h
Engine/Renderer/HDR/: HDR.cpp  HDR.h
Engine/Renderer/Lightpass/: LightPass.cpp  LightPass.h
Engine/Renderer/Noise/: BlueNoise.cpp  BlueNoise.h
Engine/Renderer/Skybox/: Skybox.cpp  Skybox.h
Engine/Resources/Shaders/: GeometryMesh_PS.hlsl  GeometryMesh_VS.hlsl  RayTracingHlslCompat.h
Engine/Resources/Shaders/Common/: BRDF.hlsl  FlagsCompat.h  HDR.hlsl  HlslCompat.h  MaterialAttributes.hlsl  Math.hlsl  Phong.hlsl  Random.hlsl  RaytracingHelper.hlsl  Types.h  TypesCompat.h
Engine/Resources/Shaders/CompositionPass/: CompositionPass_PS.hlsl  CompositionPass_VS.hlsl
Engine/Resources/Shaders/Debug/: DebugTexture_PS.hlsl  DebugTexture_VS.hlsl
Engine/Resources/Shaders/DirectLightPass/: DirectLightPass_PS.hlsl  DirectLightShadowPass_PS.hlsl
Engine/Resources/Shaders/Div/: GeometryMesh_PS.hlsl  Quaternion.hlsl  RaytracingShader.hlsl
Engine/Resources/Shaders/GBuffer/: DepthPrePass_VS.hlsl  GBuffer.hlsl  GeometryPass_PS.hlsl  GeometryPass_VS.hlsl
Engine/Resources/Shaders/HDR/: Exposure_CS.hlsl  HDR_PS.hlsl  HDR_VS.hlsl  Histogram_CS.hlsl
Engine/Resources/Shaders/LightPass/: LightPass_PS.hlsl  LightPass_VS.hlsl
Engine/Tests/AssetManager/: TextureManagerTest.h
Engine/core/: Application.cpp  AssetManager.cpp  AssetManager.h  AssimpLoader.cpp  AssimpLoader.h  CMD.h  Camera.cpp  Camera.h  Components.h  DX12Helper.h  EnginePCH.cpp  EnginePCH.h  Entity.cpp  Entity.h  Events.h  GUI.h  Game.cpp  Game.h  GameMode.cpp  GameMode.h  Helpers.h  KeyCodes.h  Logger.h  Material.h  Transform.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
Engine/inc/: Application.h  AssetManager.h  Camera.h  Components.h  DeferredRenderer.h  EnginePCH.h  Game.h  Mesh.h  PipelineManager.h  Window.h
Engine/src/: Application.cpp  AssetManager.cpp  ConstantBuffer.cpp  DeferredRenderer.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DynamicDescriptorHeap.cpp  GUI.cpp  Game.cpp  HighResolutionClock.cpp  IndexBuffer.cpp  PipelineManager.cpp  RenderTarget.cpp  ResourceStateTracker.cpp  StructuredBuffer.cpp  Texture.cpp  VertexBuffer.cpp  Window.cpp
Results/: Refactoring to Direct, Indirect, Translucent, shadow passes.txt
Sponza/: CMakeLists.txt  SponzaExe.cpp  SponzaExe.h  main.cpp
Sponza/inc/: Sponza.h
Sponza/src/: Sponza.cpp  main.cpp
Tests/: CMakeLists.txt  Tests.cpp  Tests.h  main.cpp
Tutorial4/: CMakeLists.txt
Tutorial4/inc/: Tutorial4.h
Tutorial4/src/: Tutorial4.cpp
_Build/: NRD.exp  NRI.exp  NRId.exp
_Build/Debug/: NRDd.exp  NRDd.lib  NRId.exp  NRId.lib
_Build/Release/: NRD.exp  NRD.lib  NRI.exp  NRI.lib
(+23 files in other folders)
